@@ -1,3 +1,8 @@
+2012-04-06  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/ia64/ia64.c (ia64_load_pair_ok): Return 0 if the second member
+	of the destination isn't also a FP_REGS register.
+
 2012-04-03  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
